2010-06-06 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.1.3-1 :
	- new upstream release = 3.2.1 RC2 = final
	- bring deps/makedeps/optdeps in sync with 
	  vanilla OOo

2010-05-15 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.1.1-1 :
	- new upstream release = 3.2.1 RC1
	- enable system-graphite
	- cleanup ArchLinux.patch

2010-04-04 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0.9-2 :
	- rebuild for icu 4.4
	- use internal redland. system one is still too broken

2010-03-26 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0.9-1 :
        new upstream release = post 3.2.0 bugfix release
	use lzma2/xz compression now for the source
	try to workaround bugs caused by use of new system redland
	use system lucene again that we downgraded to 2.9.2

2010-03-15 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0.7-1 :
        new upstream release = post 3.2.0 bugfix release

2010-02-07 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0.5-1 :
        new upstream release = 3.2.0rc5
	
2010-01-29 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0.4-1 :
        new upstream release = 3.2.0rc4
	fix some weird 444/555 permissions to solve
	http://bugs.archlinux.org/task/17656

2010-01-15 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0.2-1 :
        new upstream release = 3.2.0rc2

2009-12-28 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0.1-1 :
        new upstream release = 3.2.0rc1
	change how source is now downloaded via git/rsync
	build with more system libs

2009-11-28 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.1.5-1 :
        new upstream bugfix release

2009-10-22 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.1.4-1 :
        new upstream bugfix release

2009-10-09 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.1.3-1 :
        new upstream bugfix release
        drop db48 patch
        fix mktemp path, #15410

2009-09-28 Andreas Radke <andyrtr at archlinux.org>
