@@ -1,3 +1,12 @@
+2010-09-11 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.2.1.4-1 :
+	- new upstream stable release
+	- bring deps/makedeps/optdeps in sync with 
+	  vanilla OOo
+	- rework deps for clean builds
+	- use system libwpg as optdep
+
 2010-06-06 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.2.1.3-1 :
